--- a/app/src/main/res/layout/fragment_zip.xml
+++ b/app/src/main/res/layout/fragment_zip.xml
@@ -58,6 +58,8 @@
             android:layout_marginLeft="32dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
+            android:visibility="gone"
+
             android:layout_marginRight="32dp"
             android:background="@drawable/et_search_bar_bg"
             android:drawableLeft="@drawable/ic_search"
