--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,10 +17,9 @@
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="96dp"
             android:src="@drawable/splash_ic"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,6 +30,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="32dp"
+            android:visibility="gone"
             android:fontFamily="@font/itc_avant_garde_std_demi"
             android:gravity="center_horizontal"
             android:text="Simplify your filing system"
@@ -51,6 +51,7 @@
             android:layout_marginEnd="32dp"
             android:fontFamily="@font/itc_avant_garde_std_xl_t"
             android:gravity="center_horizontal"
+            android:visibility="gone"
             android:text="Keep your files more managable and organized easily"
             android:textAlignment="center"
             android:textColor="@color/white"
