--- a/app/src/main/res/layout/fragment_apps.xml
+++ b/app/src/main/res/layout/fragment_apps.xml
@@ -56,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
+            android:visibility="gone"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
