--- a/app/src/main/res/layout/fragment_document.xml
+++ b/app/src/main/res/layout/fragment_document.xml
@@ -66,6 +66,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
+            android:visibility="gone"
             android:background="@drawable/et_search_bar_bg"
             android:drawableStart="@drawable/ic_search"
             android:drawablePadding="16dp"
