--- a/app/src/main/res/layout/fragment_video_folder.xml
+++ b/app/src/main/res/layout/fragment_video_folder.xml
@@ -19,6 +19,7 @@
             <EditText
                 android:id="@+id/et"
                 android:layout_width="0dp"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginLeft="32dp"
