--- a/app/src/main/res/layout/home_menu.xml
+++ b/app/src/main/res/layout/home_menu.xml
@@ -36,6 +36,7 @@
             android:layout_height="wrap_content"
             android:text="4.2 GB"
             android:textSize="12sp"
+            android:visibility="gone"
             android:layout_marginTop="2dp"
             android:textStyle="bold"
             android:textColor="#5B6674"
