--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,4 +27,10 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
+    <style name="Theme_Dialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowMinWidthMajor">90%</item>
+        <item name="android:windowMinWidthMinor">90%</item>
+        <item name="backgroundColor">@android:color/transparent</item>
+    </style>
+
 </resources>
